<resources>
    <string name="app_name">Speedcubing Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="timer_fragment_label">Timer Fragment</string>

    <string name="timer">Timer</string>
    <string name="learnAlgs">Learn Algorithms</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="fmc">FMC</string>
    <string name="learn_algs_label">Learn Algorithms</string>
    <string name="two_look_pll">2 Look PLL</string>
    <string name="two_look_oll">2 Look OLL</string>
    <string name="pll">PLL</string>
    <string name="alg_displayer_label">Algorithm Display</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>