<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomePage">

    <fragment
        android:id="@+id/TimerFragment"
        android:name="io.github.techiehelper.speedcubingtimer.TimerFragment"
        android:label="@string/timer_fragment_label"
        tools:layout="@layout/fragment_timer">

        <action
            android:id="@+id/action_TimerFragment_to_HomePage"
            app:destination="@id/HomePage" />
    </fragment>

    <fragment
        android:id="@+id/LearnAlgs"
        android:name="io.github.techiehelper.speedcubingtimer.LearnAlgsPage"
        android:label="@string/learn_algs_label"
        tools:layout="@layout/page_learn_algs">

        <action
            android:id="@+id/action_LearnAlgs_to_HomePage"
            app:destination="@id/HomePage" />

        <action
            android:id="@+id/action_LearnAlgs_to_AlgDisplayer"
            app:destination="@id/AlgDisplayer" />
    </fragment>

    <fragment
        android:id="@+id/AlgDisplayer"
        android:name="io.github.techiehelper.speedcubingtimer.AlgDisplayer"
        android:label="@string/alg_displayer_label"
        tools:layout="@layout/page_alg_displayer">

        <action
            android:id="@+id/action_AlgDisplayer_to_LearnAlgs"
            app:destination="@id/LearnAlgs" />
    </fragment>

    <fragment
        android:id="@+id/HomePage"
        android:name="io.github.techiehelper.speedcubingtimer.HomePage"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/page_home">

        <action
            android:id="@+id/action_HomePage_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_HomePage_to_TimerFragment"
            app:destination="@id/TimerFragment" />

        <action
            android:id="@+id/action_HomePage_to_LearnAlgs"
            app:destination="@id/LearnAlgs" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="io.github.techiehelper.speedcubingtimer.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_HomePage"
            app:destination="@id/HomePage" />
    </fragment>
</navigation>