<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_baseline_settings_24"
        android:text="@string/settings"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoresButton" />

    <Button
        android:id="@+id/fmcButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_baseline_plus_one_24"
        android:text="@string/fmc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learnAlgsButton" />

    <Button
        android:id="@+id/scoresButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_baseline_show_chart_24"
        android:text="@string/scores"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fmcButton" />

    <Button
        android:drawableLeft="@drawable/ic_baseline_grid_on_24"
        android:id="@+id/learnAlgsButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/learnAlgs"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerButton" />

    <Button
        android:drawableLeft="@drawable/ic_baseline_access_alarm_24"
        android:id="@+id/timerButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:text="@string/timer"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>