<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/availableAlgs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/twolookpll"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/two_look_pll"
                app:backgroundTint="@android:color/holo_green_light" />

            <Button
                android:id="@+id/twolookoll"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/two_look_oll"
                app:backgroundTint="@android:color/holo_green_light" />

            <Button
                android:id="@+id/pll"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/pll"
                app:backgroundTint="@android:color/holo_orange_light" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>